[gd_scene load_steps=6 format=3 uid="uid://d66666666666"]

[ext_resource type="Script" path="res://scripts/Obstacle.gd" id="1_obstacle_script"]

[sub_resource type="Gradient" id="Gradient_pipe"]
offsets = PackedFloat32Array(0, 0.246575, 0.506849, 1)
colors = PackedColorArray(0.184314, 0.6, 0.368627, 1, 0.25098, 0.803922, 0.501961, 1, 0.14902, 0.54902, 0.337255, 1, 0.113725, 0.415686, 0.254902, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pipe"]
gradient = SubResource("Gradient_pipe")
width = 80
height = 600

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pipe"]
size = Vector2(80, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_score"]
size = Vector2(20, 250)

[node name="Obstacle" type="Node2D"]
script = ExtResource("1_obstacle_script")

[node name="TopPipe" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 1

[node name="TextureRect" type="TextureRect" parent="TopPipe"]
offset_left = -40.0
offset_top = -300.0
offset_right = 40.0
offset_bottom = 300.0
texture = SubResource("GradientTexture2D_pipe")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
shape = SubResource("RectangleShape2D_pipe")

[node name="BottomPipe" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 1

[node name="TextureRect" type="TextureRect" parent="BottomPipe"]
offset_left = -40.0
offset_top = -300.0
offset_right = 40.0
offset_bottom = 300.0
texture = SubResource("GradientTexture2D_pipe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
shape = SubResource("RectangleShape2D_pipe")

[node name="ScoreArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_score")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -1)
rect = Rect2(-41, -461, 82, 922)

[connection signal="body_entered" from="ScoreArea" to="." method="_on_score_area_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]